--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,9 +19,9 @@
     "SubTilteWhy": "Problems for adults, adolescents, children, couples, families, professionals.",
     "TitleBooking": "Practical information and appointment booking",
     "SubTilteBooking": "If you have any preliminary questions, do not hesitate to contact me by telephone to clarify your needs and decide on this therapeutic solution.",
-    "ReadMoreTarif": "Practical information - click",
-    "Ici": "here",
-    "ReadMoreBooking": "Appointment booking - click"
+    "ReadMoreTarif": "Practical information",
+    "Ici": "click",
+    "ReadMoreBooking": "Appointment booking"
   },
   "about": {
     "TilteOne": "What are the principles of Gestalt?",
